@@ -1,0 +1,12 @@
+SECTIONS
+{
+  .text :
+  {
+    *(.text)
+  } =0
+  .post_text_reserve :
+  {
+    . += 0x160;
+  }
+  /DISCARD/ : { *(.*) }
+}
