@@ -1,0 +1,5 @@
+	.text
+.globl start
+	.type	start, @function
+start:
+	.byte 0
